# sparse-solver-validator

./: .dockerignore  .gcloudignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: pages.yml
bins/sparse-problem/: Cargo.toml
bins/sparse-problem/src/: main.rs
bins/sparse-prover/: Cargo.toml
bins/sparse-prover/src/: main.rs
bins/sparse-validator/: Cargo.toml
bins/sparse-validator-server/: Cargo.toml
bins/sparse-validator-server/src/: main.rs
bins/sparse-validator/src/: main.rs
crates/ssv-backends/: Cargo.toml
crates/ssv-backends/src/: lib.rs
crates/ssv-canonical/: Cargo.toml
crates/ssv-canonical/src/: digest.rs  encoding.rs  lib.rs
crates/ssv-direct/: Cargo.toml
crates/ssv-direct/src/: lib.rs
crates/ssv-exact/: Cargo.toml
crates/ssv-exact/src/: digits.rs  lib.rs  protocol.rs
crates/ssv-fast/: Cargo.toml
crates/ssv-fast/src/: backend.rs  float_contract.rs  lib.rs  merkle.rs  score.rs  sumcheck.rs  transcript.rs  unit_circle.rs
crates/ssv-field-sumcheck/: Cargo.toml
crates/ssv-field-sumcheck/src/: lib.rs
crates/ssv-problem/: Cargo.toml
crates/ssv-problem/src/: digest.rs  evaluator.rs  generator.rs  lib.rs  randomness.rs  spec.rs
crates/ssv-relation/: Cargo.toml
crates/ssv-relation/src/: lib.rs
crates/ssv-service/: Cargo.toml
crates/ssv-service-protocol/: Cargo.toml
crates/ssv-service-protocol/src/: lib.rs
crates/ssv-service/src/: lib.rs
crates/ssv-service/tests/: e2e.rs
crates/ssv-solution/: Cargo.toml
crates/ssv-solution/src/: lib.rs
crates/ssv-validation/: Cargo.toml
crates/ssv-validation/src/: lib.rs
crates/ssv-whir-pcs/: Cargo.toml
crates/ssv-whir-pcs/src/: lib.rs
deploy/: gcp.env.example
docs/: architecture.md  benchmarking.md  gcp-cloud-run.md  protocol.md
examples/: challenge-template.json  direct-validation.json  exact-validation.json  fast-validation.json  local-template.json
pages/: explorer.js  index.html  styles.css
proposals/: fast-path-a-posteriori-statistical-guarantees.md
