[workspace]
members = [
    "crates/ssv-canonical",
    "crates/ssv-problem",
    "crates/ssv-solution",
    "crates/ssv-service-protocol",
    "crates/ssv-service",
    "crates/ssv-direct",
    "bins/sparse-problem",
    "bins/sparse-prover",
    "bins/sparse-validator",
    "bins/sparse-validator-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.97"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
blake3 = "=1.8.5"
clap = { version = "4.5.54", features = ["derive", "env"] }
ed25519-dalek = { version = "=2.2.0", features = ["rand_core"] }
hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
tower = { version = "0.5.3", features = ["limit"] }
zeroize = "1.8.2"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
lto = "off"
codegen-units = 16
