[workspace]
members = [
    "crates/ssv-canonical",
    "crates/ssv-problem",
    "crates/ssv-relation",
    "crates/ssv-solution",
    "crates/ssv-service-protocol",
    "crates/ssv-validation",
    "crates/ssv-service",
    "crates/ssv-direct",
    "crates/ssv-exact",
    "crates/ssv-field-sumcheck",
    "crates/ssv-fast",
    "crates/ssv-backends",
    "crates/ssv-whir-pcs",
    "bins/sparse-problem",
    "bins/sparse-prover",
    "bins/sparse-validator",
    "bins/sparse-validator-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.97"

[workspace.dependencies]
anyhow = "1.0.100"
ark-ff = { version = "0.5", features = ["std"] }
axum = "0.8.8"
bincode = "=1.3.3"
blake3 = "=1.8.3"
clap = { version = "4.5.54", features = ["derive", "env"] }
ed25519-dalek = { version = "=2.2.0", features = ["rand_core"] }
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rayon = "1.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
tower = { version = "0.5.3", features = ["limit"] }
zeroize = "1.8.2"
whir = { git = "https://github.com/worldfnd/whir.git", rev = "10aa7d0bae3663fd149b6b88b6eff2209b867970", default-features = false, features = ["parallel"] }

[profile.release]
lto = "thin"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
lto = "off"
codegen-units = 16

# The pinned WHIR revision adds a debug-only `Proof.pattern` field. Its public
# certificate codec deliberately excludes that diagnostic trace, so keep the
# dependency's proof representation identical in dev, test, and release.
[profile.dev.package.whir]
debug-assertions = false

[profile.test.package.whir]
debug-assertions = false
