[package]
name = "sparse-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
ssv-direct = { path = "../../crates/ssv-direct" }
ssv-problem = { path = "../../crates/ssv-problem" }
ssv-service-protocol = { path = "../../crates/ssv-service-protocol" }
ssv-solution = { path = "../../crates/ssv-solution" }

