[package]
name = "sparse-validator-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
ssv-canonical = { path = "../../crates/ssv-canonical" }
ssv-problem = { path = "../../crates/ssv-problem" }
ssv-service = { path = "../../crates/ssv-service" }
ssv-service-protocol = { path = "../../crates/ssv-service-protocol" }
tokio.workspace = true
tower.workspace = true
zeroize.workspace = true
