[package]
name = "sparse-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
serde_json.workspace = true
ssv-canonical = { path = "../../crates/ssv-canonical" }
ssv-direct = { path = "../../crates/ssv-direct" }
ssv-problem = { path = "../../crates/ssv-problem" }
ssv-service-protocol = { path = "../../crates/ssv-service-protocol" }
