[package]
name = "ssv-exact"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ark-ff.workspace = true
blake3.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
ssv-problem = { path = "../ssv-problem" }
ssv-relation = { path = "../ssv-relation" }
ssv-field-sumcheck = { path = "../ssv-field-sumcheck" }
ssv-service-protocol = { path = "../ssv-service-protocol" }
ssv-solution = { path = "../ssv-solution" }
ssv-validation = { path = "../ssv-validation" }
ssv-whir-pcs = { path = "../ssv-whir-pcs" }
thiserror.workspace = true
