[package]
name = "ssv-problem"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
ssv-canonical = { path = "../ssv-canonical" }
thiserror.workspace = true

