[package]
name = "ssv-relation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
num-bigint.workspace = true
num-traits.workspace = true
ssv-problem = { path = "../ssv-problem" }
ssv-solution = { path = "../ssv-solution" }
thiserror.workspace = true
