[package]
name = "ssv-validation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde_json.workspace = true
ssv-canonical = { path = "../ssv-canonical" }
ssv-problem = { path = "../ssv-problem" }
ssv-service-protocol = { path = "../ssv-service-protocol" }
ssv-solution = { path = "../ssv-solution" }
thiserror.workspace = true
